Avoid extra margins

--- a/index.css
+++ b/index.css
@@ -36,8 +36,6 @@
 /* Poppy container & in different tip modes */
 .poppy-container-tip-top{
 	margin-top: 8px;
-	margin-left: 8px;
-	margin-right: 8px;
 }
 .poppy-container-tip-top .poppy-tip-container{
 	top: -40px;
@@ -47,8 +45,6 @@
 }
 .poppy-container-tip-bottom{
 	margin-bottom: 8px;
-	margin-left: 8px;
-	margin-right: 8px;
 }
 .poppy-container-tip-bottom .poppy-tip-container{
 	bottom: -40px;
@@ -58,8 +54,6 @@
 }
 .poppy-container-tip-right{
 	margin-right: 8px;
-	margin-top: 8px;
-	margin-bottom: 8px;
 }
 .poppy-container-tip-right .poppy-tip-container{
 	right: -40px;
@@ -69,8 +63,6 @@
 }
 .poppy-container-tip-left{
 	margin-left: 8px;
-	margin-top: 8px;
-	margin-bottom: 8px;
 }
 .poppy-container-tip-left .poppy-tip-container{
 	left: -40px;
